[ v1.2.0 ] Apply new look to the site

--- a/public/less/calendar-viz.less
+++ b/public/less/calendar-viz.less
@@ -1,17 +1,34 @@
 @month-col-width: 60px;
 @row-height: 18px;
+@dark-grey: #494F5B;
 
 /* Viz section ================= */
 
 #viz-section {
-  background: #009984;
-  color: #FFF;
   font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
   font-weight: 300;
   font-size: 12px;
-  padding-top: 50px;
   padding-bottom: 50px;
-  margin-top: 150px;
+  background: #009984;
+  color: #FFF;
+
+  .header {
+    background: #FFF;
+    color: @dark-grey;
+    ul {
+      list-style-type: none;
+      padding-left: 0;
+      .tier-number {
+        font-weight: bold;
+        text-transform: uppercase;
+      }
+    }
+  }
+
+  #viz {
+    padding-top: 50px;
+    padding-bottom: 30px;
+  }
 
   #left-container {
     float: left;
