--- a/views/projects.html
+++ b/views/projects.html
@@ -4,46 +4,113 @@
 
 {% block navItems %}
   <ul class="nav navbar-nav">
+    <li><a href="/about">About</a></li>
     <li class="active"><a href="/projects">Projects</a></li>
-    <li><a href="/services">Services</a></li>
     <li><a href="/resources">Resources</a></li>
   </ul>
 {% endblock %}
 
-
 {% block mainContent %}
 
   <div class="big-section" id="bug-list">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6 col-md-offset-3">
-          <h5 class="text-center">What We Are Working On</h5>
-          <table>
-            <thead>
-              <tr>
-                <th>ID</th>
-                <th>SUMMARY</th>
-              </tr>
-            </thead>
-            <tbody>
-            </tbody>
-          </table>
-        </div>
+    <div class="row header">
+      <div class="col-md-8 col-md-offset-2 text-center">
+        <h2>What We're Working On</h2>
+        <p>We have helped teams across the Foundation produce websites and print assets fro their projects and initiatives.</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3">
+        <table>
+          <thead>
+            <tr>
+              <th>ID</th>
+              <th>SUMMARY</th>
+            </tr>
+          </thead>
+          <tbody>
+          </tbody>
+        </table>
       </div>
     </div>
   </div>
 
-  <div class="container">
-    <div class="big-section-divider">
+  <div class="big-section" id="past-projects">
+    <div class="row header">
+      <div class="col-md-8 col-md-offset-2 text-center">
+        <h2>What We Made</h2>
+        <p>We have helped teams across the Foundation produce websites and print assets fro their projects and initiatives.</p>
+      </div>
     </div>
-  </div>
-
-
-  <div class="big-section">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6 col-md-offset-3">
-          <h5 class="text-center">Past Projects</h5>
+    <div class="row project">
+      <div class="col-md-3">
+        <div class="thumbnail">
+          <img src="" alt="">
+        </div>
+        <div class="title">
+          <h4>Appmaker Website</h4>
+          <p></p>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="thumbnail">
+          <img src="" alt="">
+        </div>
+        <div class="title">
+          <h4>Appmaker Website</h4>
+          <p></p>
+        </div>
+      </div><div class="col-md-3">
+        <div class="thumbnail">
+          <img src="" alt="">
+        </div>
+        <div class="title">
+          <h4>Appmaker Website</h4>
+          <p></p>
+        </div>
+      </div><div class="col-md-3">
+        <div class="thumbnail">
+          <img src="" alt="">
+        </div>
+        <div class="title">
+          <h4>Appmaker Website</h4>
+          <p></p>
+        </div>
+      </div>
+    </div>
+    <div class="row project">
+      <div class="col-md-3">
+        <div class="thumbnail">
+          <img src="" alt="">
+        </div>
+        <div class="title">
+          <h4>Appmaker Website</h4>
+          <p></p>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="thumbnail">
+          <img src="" alt="">
+        </div>
+        <div class="title">
+          <h4>Appmaker Website</h4>
+          <p></p>
+        </div>
+      </div><div class="col-md-3">
+        <div class="thumbnail">
+          <img src="" alt="">
+        </div>
+        <div class="title">
+          <h4>Appmaker Website</h4>
+          <p></p>
+        </div>
+      </div><div class="col-md-3">
+        <div class="thumbnail">
+          <img src="" alt="">
+        </div>
+        <div class="title">
+          <h4>Appmaker Website</h4>
+          <p></p>
         </div>
       </div>
     </div>
