--- a/views/resources.html
+++ b/views/resources.html
@@ -4,27 +4,29 @@
 
 {% block navItems %}
   <ul class="nav navbar-nav">
+    <li><a href="/about">About</a></li>
     <li><a href="/projects">Projects</a></li>
-    <li><a href="/services">Services</a></li>
     <li class="active"><a href="/resources">Resources</a></li>
   </ul>
 {% endblock %}
 
-
 {% block mainContent %}
 
   <div class="big-section">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-4 col-md-offset-4 text-center">
-          <h5>Resources</h5>
-          <p>
-            <a href="https://wiki.mozilla.org/Encyclopedia_Bestpractica">Encyclopedia Bestpractica</a>
-          </p>
-          <p>
-            A comprehensive guide to the Mozilla Foundation's best practices for communications and engagement.
-          </p>
-        </div>
+    <div class="row header">
+      <div class="col-md-8 col-md-offset-2 text-center">
+        <h2>Resources</h2>
+        <p>We will showcase some helpful resources that will help you draft, design and develop your projects.</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-4 col-md-offset-4 text-center">
+        <p>
+          <a href="https://wiki.mozilla.org/Encyclopedia_Bestpractica">Encyclopedia Bestpractica</a>
+        </p>
+        <p>
+          A comprehensive guide to the Mozilla Foundation's best practices for communications and engagement.
+        </p>
       </div>
     </div>
   </div>
