--- a/public/less/style.less
+++ b/public/less/style.less
@@ -136,9 +136,22 @@ nav#studiomofo-nav {
   top: -180px;
 }
 
+
+
+/* =======================
+* Home Page
+*/
+
+#tagline {
+  background: @light-grey;
+  padding: 25px 0;
+  font-size: 25px;
+}
+
 #form-section {
   background: @middle-grey;
-  h2 {
+  .header {
+    background: transparent;
     color: #FFF;
   }
   #request-form {
@@ -176,18 +189,6 @@ nav#studiomofo-nav {
 #error-message{
   font-size: 20px;
   margin-top: 50px;
-}
-
-
-
-/* =======================
-* Home Page
-*/
-
-#tagline {
-  background: @light-grey;
-  padding: 25px 0;
-  font-size: 25px;
 }
 
 
