--- a/views/about.html
+++ b/views/about.html
@@ -1,6 +1,6 @@
 {% extends "views/layout.html" %}
 
-{% block bodyOpen %}<body class="services">{% endblock %}
+{% block bodyOpen %}<body class="about">{% endblock %}
 
 {% block navItems %}
   <ul class="nav navbar-nav">
@@ -18,22 +18,34 @@
         <p>We are Studio MoFo.  A trio that drafts, designs, and develops for the Mozilla Foundation.</p>
       </div>
     </div>
-    <div class="row member">
-      <div class="col-md-12">
-        <h2 class="name">Erika Drushka</h2>
-        <p class="title">Copywriter</p>
+    <div class="member">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <h2 class="name">Erika Drushka</h2>
+            <p class="title">Copywriter</p>
+          </div>
+        </div>
       </div>
     </div>
-    <div class="row member">
-      <div class="col-md-12">
-        <h2 class="name">Sabrina Ng</h2>
-        <p class="title">Designer</p>
+    <div class="member">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <h2 class="name">Sabrina Ng</h2>
+            <p class="title">Designer</p>
+          </div>
+        </div>
       </div>
     </div>
-    <div class="row member">
-      <div class="col-md-12">
-        <h2 class="name">Mavis Ou</h2>
-        <p class="title">Developer</p>
+    <div class="member">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <h2 class="name">Mavis Ou</h2>
+            <p class="title">Developer</p>
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -45,15 +57,17 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-6 text-center">
-        <p>
-          <a href="https://mofocomms.etherpad.mozilla.org/ProjectProcess">ProjectProcess</a>
-        </p>
-      </div>
-      <div class="col-md-6 text-center">
-        <p>
-          <a href="https://mofocomms.etherpad.mozilla.org/ProjectProcessTemplate"> ProjectProcessTemplate</a>
-        </p>
+      <div class="container">
+        <div class="col-md-6 text-center">
+          <p>
+            <a href="https://mofocomms.etherpad.mozilla.org/ProjectProcess">ProjectProcess</a>
+          </p>
+        </div>
+        <div class="col-md-6 text-center">
+          <p>
+            <a href="https://mofocomms.etherpad.mozilla.org/ProjectProcessTemplate"> ProjectProcessTemplate</a>
+          </p>
+        </div>
       </div>
     </div>
   </div>
