--- a/views/index.html
+++ b/views/index.html
@@ -4,9 +4,11 @@
 
 {% block tagline %}
 <div id="tagline">
-  <div class="row">
-    <div class="col-md-6 col-md-offset-3 text-center">
-      <p>We help plan communications, websites, graphics, and other engagement projects for the Mozilla Foundation.</p>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3 text-center">
+        <p>We help plan communications, websites, graphics, and other engagement projects for the Mozilla Foundation.</p>
+      </div>
     </div>
   </div>
 </div>
@@ -15,26 +17,34 @@
 {% block mainContent %}
   <div id="viz-section" class="big-section">
     <div class="row header">
-      <div class="col-md-8 col-md-offset-2">
-        <h2 class="text-center">Foundation Calendar</h2>
-        <ul>
+      <div class="col-md-12">
+        <div class="row">
+          <div class="col-md-8 col-md-offset-2">
+            <h2 class="text-center">Foundation Calendar</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4 col-md-offset-4">
+            <ul>
           <li>
-            <span class="tier-number">Tier 1:</span>
-            Tier 1 Tier 1 Tier 1 Tier 1 Tier 1
+            <span class="tier-number tier-1">Tier 1:</span>
+            Mozilla full-court press, including Firefox channels and snippet.
           </li>
           <li>
-            <span class="tier-number">Tier 2:</span>
-            Tier 2 Tier 2 Tier 2 Tier 2 Tier 2
+            <span class="tier-number tier-2">Tier 2:</span>
+            One Mozilla, including Mozilla blog and socials media channels, but not the snippet or Firefox channels.
           </li>
           <li>
-            <span class="tier-number">Tier 3:</span>
-            Tier 3 Tier 3 Tier 3 Tier 3 Tier 3
+            <span class="tier-number tier-3">Tier 3:</span>
+            All-Foundation Audiences via our networks, social media and email lists.
           </li>
           <li>
-            <span class="tier-number">Tier 4:</span>
-            Tier 4 Tier 4 Tier 4 Tier 4 Tier 4
+            <span class="tier-number tier-4">Tier 4:</span>
+            Project or region-specific communication, freely employed at the discretion of each team.
           </li>
         </ul>
+          </div>
+        </div>
       </div>
     </div>
     <div class="row" id="viz">
@@ -73,10 +83,14 @@
 
   <div id="form-section" class="big-section">
     <div class="container">
-      <div class="row">
+      <div class="row header">
         <div class="col-md-8 col-md-offset-2 text-center">
           <h2>Service Request</h2>
           <h3>Tell us what you need.</h3>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6 col-md-offset-3 text-center">
           <form id="request-form" action="/requestForm" method="post" role="form">
             <label for="requester-name" class="hidden">Your Name</label>
             <input id="requester-name" class="form-control" type="text" maxlength="50" size="100" name="name" placeholder="What's your name?" required />
