--- a/views/projects.html
+++ b/views/projects.html
@@ -19,18 +19,20 @@
         <p>We have helped teams across the Foundation produce websites and print assets fro their projects and initiatives.</p>
       </div>
     </div>
-    <div class="row">
-      <div class="col-md-6 col-md-offset-3">
-        <table>
-          <thead>
-            <tr>
-              <th>ID</th>
-              <th>SUMMARY</th>
-            </tr>
-          </thead>
-          <tbody>
-          </tbody>
-        </table>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+          <table>
+            <thead>
+              <tr>
+                <th>ID</th>
+                <th>SUMMARY</th>
+              </tr>
+            </thead>
+            <tbody>
+            </tbody>
+          </table>
+        </div>
       </div>
     </div>
   </div>
@@ -42,75 +44,77 @@
         <p>We have helped teams across the Foundation produce websites and print assets fro their projects and initiatives.</p>
       </div>
     </div>
-    <div class="row project">
-      <div class="col-md-3">
-        <div class="thumbnail">
-          <img src="" alt="">
+    <div class="container">
+      <div class="row project">
+        <div class="col-md-3">
+          <div class="thumbnail">
+            <img src="" alt="">
+          </div>
+          <div class="title">
+            <h4>Appmaker Website</h4>
+            <p></p>
+          </div>
         </div>
-        <div class="title">
-          <h4>Appmaker Website</h4>
-          <p></p>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="thumbnail">
-          <img src="" alt="">
-        </div>
-        <div class="title">
-          <h4>Appmaker Website</h4>
-          <p></p>
-        </div>
-      </div><div class="col-md-3">
-        <div class="thumbnail">
-          <img src="" alt="">
-        </div>
-        <div class="title">
-          <h4>Appmaker Website</h4>
-          <p></p>
-        </div>
-      </div><div class="col-md-3">
-        <div class="thumbnail">
-          <img src="" alt="">
-        </div>
-        <div class="title">
-          <h4>Appmaker Website</h4>
-          <p></p>
-        </div>
-      </div>
-    </div>
-    <div class="row project">
-      <div class="col-md-3">
-        <div class="thumbnail">
-          <img src="" alt="">
-        </div>
-        <div class="title">
-          <h4>Appmaker Website</h4>
-          <p></p>
+        <div class="col-md-3">
+          <div class="thumbnail">
+            <img src="" alt="">
+          </div>
+          <div class="title">
+            <h4>Appmaker Website</h4>
+            <p></p>
+          </div>
+        </div><div class="col-md-3">
+          <div class="thumbnail">
+            <img src="" alt="">
+          </div>
+          <div class="title">
+            <h4>Appmaker Website</h4>
+            <p></p>
+          </div>
+        </div><div class="col-md-3">
+          <div class="thumbnail">
+            <img src="" alt="">
+          </div>
+          <div class="title">
+            <h4>Appmaker Website</h4>
+            <p></p>
+          </div>
         </div>
       </div>
-      <div class="col-md-3">
-        <div class="thumbnail">
-          <img src="" alt="">
+      <div class="row project">
+        <div class="col-md-3">
+          <div class="thumbnail">
+            <img src="" alt="">
+          </div>
+          <div class="title">
+            <h4>Appmaker Website</h4>
+            <p></p>
+          </div>
         </div>
-        <div class="title">
-          <h4>Appmaker Website</h4>
-          <p></p>
-        </div>
-      </div><div class="col-md-3">
-        <div class="thumbnail">
-          <img src="" alt="">
-        </div>
-        <div class="title">
-          <h4>Appmaker Website</h4>
-          <p></p>
-        </div>
-      </div><div class="col-md-3">
-        <div class="thumbnail">
-          <img src="" alt="">
-        </div>
-        <div class="title">
-          <h4>Appmaker Website</h4>
-          <p></p>
+        <div class="col-md-3">
+          <div class="thumbnail">
+            <img src="" alt="">
+          </div>
+          <div class="title">
+            <h4>Appmaker Website</h4>
+            <p></p>
+          </div>
+        </div><div class="col-md-3">
+          <div class="thumbnail">
+            <img src="" alt="">
+          </div>
+          <div class="title">
+            <h4>Appmaker Website</h4>
+            <p></p>
+          </div>
+        </div><div class="col-md-3">
+          <div class="thumbnail">
+            <img src="" alt="">
+          </div>
+          <div class="title">
+            <h4>Appmaker Website</h4>
+            <p></p>
+          </div>
         </div>
       </div>
     </div>
