--- a/views/resources.html
+++ b/views/resources.html
@@ -19,14 +19,16 @@
         <p>We will showcase some helpful resources that will help you draft, design and develop your projects.</p>
       </div>
     </div>
-    <div class="row">
-      <div class="col-md-4 col-md-offset-4 text-center">
-        <p>
-          <a href="https://wiki.mozilla.org/Encyclopedia_Bestpractica">Encyclopedia Bestpractica</a>
-        </p>
-        <p>
-          A comprehensive guide to the Mozilla Foundation's best practices for communications and engagement.
-        </p>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4 col-md-offset-4 text-center">
+          <p>
+            <a href="https://wiki.mozilla.org/Encyclopedia_Bestpractica">Encyclopedia Bestpractica</a>
+          </p>
+          <p>
+            A comprehensive guide to the Mozilla Foundation's best practices for communications and engagement.
+          </p>
+        </div>
       </div>
     </div>
   </div>
