--- a/views/index.html
+++ b/views/index.html
@@ -50,7 +50,7 @@
     <div class="row" id="viz">
       <div id="left-container">
         <div id="description-box">
-          <header id="event-title"></header>
+          <h4 id="event-title"></h4>
           <ul id="event-details">
           </ul>
         </div>
