--- a/views/layout.html
+++ b/views/layout.html
@@ -38,6 +38,8 @@
     {% endblock %}
   </main>
   <footer>
+    <div class="container">
+    </div>
   </footer>
 
   <script src="config.js"></script>
