minor style changes

--- a/public/less/style.less
+++ b/public/less/style.less
@@ -208,13 +208,14 @@ nav#studiomofo-nav {
       color: #FFF;
     }
   }
+  .member {
+    .text-center;
+  }
   .member:nth-child(odd) {
     background: @light-grey;
-    text-align: left;
   }
   .member:nth-child(even) {
     background: @middle-grey;
-    text-align: right;
   }
   .avatar img {
     width: 120px;
