--- a/public/less/calendar-viz.less
+++ b/public/less/calendar-viz.less
@@ -174,6 +174,13 @@
     }
     .row-hover {
       background: @row-hover !important;
+      color: #FFF !important;
+    }
+    tbody td.row-hover {
+      border: none;
+      .dot {
+        background: #FFF !important;
+      }
     }
     th {
       font-weight: normal;
