minor style changes

--- a/views/index.html
+++ b/views/index.html
@@ -6,7 +6,7 @@
 <div id="tagline">
   <div class="container">
     <div class="row">
-      <div class="col-md-6 col-md-offset-3 text-center">
+      <div class="col-md-8 col-md-offset-2 text-center">
         <p>We help plan communications, websites, graphics, and other engagement projects for the Mozilla Foundation.</p>
       </div>
     </div>
@@ -16,33 +16,35 @@
 
 {% block mainContent %}
   <div id="viz-section" class="big-section">
-    <div class="row header">
-      <div class="col-md-12">
-        <div class="row">
-          <div class="col-md-8 col-md-offset-2">
-            <h2 class="text-center">Foundation Calendar</h2>
+    <div class="container">
+      <div class="row header">
+        <div class="col-md-12">
+          <div class="row">
+            <div class="col-md-8 col-md-offset-2">
+              <h2 class="text-center">Foundation Calendar</h2>
+            </div>
           </div>
-        </div>
-        <div class="row">
-          <div class="col-md-4 col-md-offset-4">
-            <ul>
-          <li>
-            <span class="tier-number tier-1">Tier 1:</span>
-            Mozilla full-court press, including Firefox channels and snippet.
-          </li>
-          <li>
-            <span class="tier-number tier-2">Tier 2:</span>
-            One Mozilla, including Mozilla blog and socials media channels, but not the snippet or Firefox channels.
-          </li>
-          <li>
-            <span class="tier-number tier-3">Tier 3:</span>
-            All-Foundation Audiences via our networks, social media and email lists.
-          </li>
-          <li>
-            <span class="tier-number tier-4">Tier 4:</span>
-            Project or region-specific communication, freely employed at the discretion of each team.
-          </li>
-        </ul>
+          <div class="row">
+            <div class="col-md-6 col-md-offset-3">
+              <ul>
+                <li>
+                  <span class="tier-number tier-1">Tier 1:</span>
+                  Mozilla full-court press, including Firefox channels and snippet.
+                </li>
+                <li>
+                  <span class="tier-number tier-2">Tier 2:</span>
+                  One Mozilla, including Mozilla blog and socials media channels, but not the snippet or Firefox channels.
+                </li>
+                <li>
+                  <span class="tier-number tier-3">Tier 3:</span>
+                  All-Foundation Audiences via our networks, social media and email lists.
+                </li>
+                <li>
+                  <span class="tier-number tier-4">Tier 4:</span>
+                  Project or region-specific communication, freely employed at the discretion of each team.
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
