--- a/views/resources.html
+++ b/views/resources.html
@@ -13,10 +13,12 @@
 {% block mainContent %}
 
   <div class="big-section">
-    <div class="row header">
-      <div class="col-md-8 col-md-offset-2 text-center">
-        <h2>Resources</h2>
-        <p>We will showcase some helpful resources that will help you draft, design and develop your projects.</p>
+    <div class="container">
+      <div class="row header">
+        <div class="col-md-8 col-md-offset-2 text-center">
+          <h2>Resources</h2>
+          <p>We will showcase some helpful resources that will help you draft, design and develop your projects.</p>
+        </div>
       </div>
     </div>
     <div class="container">
