--- a/views/about.html
+++ b/views/about.html
@@ -12,10 +12,12 @@
 
 {% block mainContent %}
   <div id="who-are-we" class="big-section">
-    <div class="row header">
-      <div class="col-md-8 col-md-offset-2 text-center">
-        <h2>Who We Are</h2>
-        <p>We are Studio MoFo.  A trio that drafts, designs, and develops for the Mozilla Foundation.</p>
+    <div class="container">
+      <div class="row header">
+        <div class="col-md-8 col-md-offset-2 text-center">
+          <h2>Who We Are</h2>
+          <p>We are Studio MoFo.  A trio that drafts, designs, and develops for the Mozilla Foundation.</p>
+        </div>
       </div>
     </div>
     <div class="member">
@@ -51,13 +53,15 @@
   </div>
 
   <div class="big-section">
-    <div class="row header">
-      <div class="col-md-8 col-md-offset-2 text-center">
-        <h2>What We Do</h2>
+    <div class="container">
+      <div class="row header">
+        <div class="col-md-8 col-md-offset-2 text-center">
+          <h2>What We Do</h2>
+        </div>
       </div>
     </div>
-    <div class="row">
-      <div class="container">
+    <div class="container">
+      <div class="row">
         <div class="col-md-6 text-center">
           <p>
             <a href="https://mofocomms.etherpad.mozilla.org/ProjectProcess">ProjectProcess</a>
